--- a/SmartSemaphores/.classpath
+++ b/SmartSemaphores/.classpath
@@ -9,7 +9,7 @@
 	<classpathentry kind="con" path="GROOVY_SUPPORT"/>
 	<classpathentry kind="con" path="GROOVY_DSL_SUPPORT"/>
 	<classpathentry kind="con" path="REPAST_SIMPHONY_SUPPORT"/>
-	<classpathentry exported="true" kind="lib" path="/Users/nadiacarvalho/Documents/Github/AIAD/SmartSemaphores/lib/jade.jar"/>
-	<classpathentry exported="true" kind="lib" path="/Users/nadiacarvalho/Documents/Github/AIAD/SmartSemaphores/lib/SAJaS.jar"/>
+	<classpathentry kind="lib" path="lib/SAJaS.jar"/>
+	<classpathentry kind="lib" path="lib/jade.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
