--- a/SmartSemaphores/Repast.settings
+++ b/SmartSemaphores/Repast.settings
@@ -12,6 +12,6 @@
     <string>SettingsRegistryId</string>
     <string>Repast.registry</string>
     <string>LastLoadedScenario</string>
-    <string>D:\Git\AIAD\SmartSemaphores\SmartSemaphores.rs</string>
+    <string>C:\Users\up201503616\Desktop\AIAD\SmartSemaphores\SmartSemaphores.rs</string>
   </hashtable>
 </simphony.settings.SettingsRegistry>
