--- a/SmartSemaphores/output/config.props
+++ b/SmartSemaphores/output/config.props
@@ -1,9 +1,9 @@
-model.archive = D:/Git/AIAD/SmartSemaphores/output/complete_model.jar
+model.archive = C:/Users/up201503616/Desktop/AIAD/SmartSemaphores/output/complete_model.jar
 batch.params.file = scenario.rs/batch_params.xml
-ssh.key_dir = C:/Users/Tiago/.ssh
+ssh.key_dir = C:/Users/up201503616/.ssh
 poll.frequency = 60.0
-model.output = D:/Git/AIAD/SmartSemaphores/output
+model.output = C:/Users/up201503616/Desktop/AIAD/SmartSemaphores/output
 
-vm.arguments = 
+vm.arguments = -Xmx512M
 local.0.instances = 2
-local.0.working_directory = C:/Users/Tiago/AppData/Local/Temp/
+local.0.working_directory = C:/Users/UP2015~3/AppData/Local/Temp/
